--- a/WEEK2/drones.css
+++ b/WEEK2/drones.css
@@ -40,7 +40,7 @@ h1:hover {
 /*Grid with floats*/
 h2{
     
-    background-color:cyan;
+    background-color:black;
     color:black;
     text-align: center;
     margin-top:25px;
