--- a/WEEK2/drones.css
+++ b/WEEK2/drones.css
@@ -12,9 +12,12 @@
     font-family: 'Turret Road', cursive;
     src: url('https://fonts.googleapis.com/css2?family=Turret+Road:wght@700&display=swap');
 }
-
+@font-face {
+    font-family: 'Vampiro One', cursive;
+    src: url('https://fonts.googleapis.com/css2?family=Vampiro+One&display=swap');
+}
 body{
-    font-family: 'Vampiro One', cursive;/*I've pasted the link of this into .html*/
+    font-family: 'Vampiro One', cursive;
     width:90%;
     margin-left: auto;
     margin-right: auto;
@@ -27,7 +30,7 @@ h1{
     color:white;
     text-align: center;
     height:50px;
-    border:3px solid red;
+    border:3px solid blue;
     margin-top:15px;
     padding-top: 5px;
     font-family: DeliciousRoman, Helvetica, Arial, sans-serif;/*https://designmodo.com/font-face/#how-to-use-font-face*/
@@ -40,11 +43,11 @@ h1:hover {
 /*Grid with floats*/
 h2{
     
-    background-color:green;
-    color:black;
+    background-color:gray;
+    color:white;
     text-align: center;
     margin-top:25px;
-    border:3px solid red;
+    border:3px solid blue;
     height:50px;
     vertical-align: middle;
     padding-top: 5px;
@@ -68,10 +71,13 @@ h2:hover{
     /*background-image: url(images/divbackground.jpg);*/
     margin-top:15px;
     text-align:center;
-    
-    
-    
-    
+}
+p::first-letter {
+  font-size: 200%;
+  color: blue;
+}
+p::first-line {
+  color: blue;
 }
 #grid-floats li:first-child{
     float:left;
@@ -357,7 +363,7 @@ h2{
 
 h3{
     text-align:center;
-    color:red;
+    color:blue;
     
 }
 #grid-floats img {  
