--- a/WEEK2/style.css
+++ b/WEEK2/style.css
@@ -24,15 +24,17 @@ body{
     background-image:url(images/background-image.jpg)
 }
 /*Grids*/
-h1{
-    
-    background-color:black;
+h1, h2{
     color:white;
     text-align: center;
     height:50px;
     border:3px solid blue;
-    margin-top:15px;
     padding-top: 5px;
+}
+
+h1{
+    background-color:black;
+    margin-top:15px;
     font-family: DeliciousRoman, Helvetica, Arial, sans-serif;/*https://designmodo.com/font-face/#how-to-use-font-face*/
     transition: color;
 }
@@ -42,15 +44,8 @@ h1:hover {
 }
 /*Grid with floats*/
 h2{
-    
     background-color:gray;
-    color:white;
-    text-align: center;
     margin-top:25px;
-    border:3px solid blue;
-    height:50px;
-    vertical-align: middle;
-    padding-top: 5px;
     font-family: 'Turret Road', cursive; /*https://fonts.google.com/specimen/Turret+Road?sidebar.open=true&selection.family=Turret+Road:wght@700*/
     transition: color;
 }
@@ -60,17 +55,16 @@ h2:hover{
 }
 
 #grid-floats .grid-item{/*includes h3 image and p tags*/
-    
     width:23%;
     height: 40%;
     /*border:3px solid black;*/
-    size: 50%;
     margin-left: 20px;
     margin-top: 5px;
     list-style: none;
     /*background-image: url(images/divbackground.jpg);*/
     margin-top:15px;
     text-align:center;
+    float:left;
 }
 p::first-letter {
   font-size: 200%;
@@ -79,6 +73,7 @@ p::first-letter {
 p::first-line {
   color: blue;
 }
+/*floats Desktop view*/
 #grid-floats li:first-child{
     float:left;
     width:40%; 
@@ -87,270 +82,147 @@ p::first-line {
 
 #grid-floats li:nth-child(2){
     float:left;
-    text-align:center;
+    
 }
 
 #grid-floats li:nth-child(3){
     float:right;
-    text-align:center;
 }
 #grid-floats li:nth-child(4){
     clear:both;
     float:left;
-    text-align:center;
 }
 #grid-floats li:nth-child(5){
-    
     float:left;
-    text-align:center;
 }
+
 #grid-floats li:nth-child(6){
-    
     float:left;
-    text-align:center;
 }
 #grid-floats li:nth-child(7){
-    
     float:left;
-    text-align:center;
+    
 }
 #grid-floats li:nth-child(8){
     clear:both;
     float:left;
-    text-align:center;
 }
 #grid-floats li:nth-child(9){
-    
     float:left;
-    text-align:center;
 }
 #grid-floats li:nth-child(10){
-    
     float:left;
-    text-align:center;
 }
 #grid-floats li:nth-child(11){
-    
     float:left;
-    text-align:center;
 }
 #grid-floats li:nth-child(12){
     clear:both;
     float:left;
-    text-align:center;
 }
 #grid-floats li:nth-child(13){
-    
     float:left;
-    text-align:center;
 }
 #grid-floats li:nth-child(14){
-    
     float:left;
-    text-align:center;
 }
-
-
+/*floats mobile phone view*/
 @media (max-width:600px){
-
-    
-
-    #grid-floats li:first-child{
-        
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(2){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(3){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(4){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(5){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(6){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(7){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(8){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(9){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(10){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(11){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(12){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(13){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
-    #grid-floats li:nth-child(14){
-    
-        width:90%;
-        text-align:center;
-        overflow: hidden;
-    }
+    #grid-floats li:first-child{ /*Normally I shouldn't need this but without this part it didn't work*/
+       width:100%; 
+     
 }
+    #grid-floats .grid-item{
+        width:100%;
+    }
 
+}
+/*grid floats tablet view */
 @media screen /*https://websiteedu.com/media-queries-for-mobile-and-tablets.../*/
     and (min-device-width: 600px) 
     and (max-device-width: 1024px) 
 {
 
 *{
-    
     box-sizing: border-box;
-        }
+ }
     
 #grid-floats li:first-child{
     width:45%;
     float:left;
     text-align: center;
-       
-}
-    
+}   
 #grid-floats li:nth-child(2){
     width:45%;
     float:right;
-        
-    }
-
+}
 #grid-floats li:nth-child(3){
     clear:left;
     float:left;
     width:30%;
-    
     margin-top: 15px;
-    
-        
-        
-    }
+}
+
 #grid-floats li:nth-child(4){
-    
     clear:right;
     float: left;
     width:30%;
-    
     margin-left: 25px;
     padding-left: 0;
     margin-top: 15px;
-    
-        
 }
-    #grid-floats li:nth-child(5){
-        clear:left;
-        clear:right;
-        float:right;
-        width:30%;
-         
-         
-        
-    }
+#grid-floats li:nth-child(5){
+    clear:left;
+    clear:right;
+    float:right;
+    width:30%;
+}
 #grid-floats li:nth-child(6){
     clear:both;
     width:30%;
     float:left;  
-   
 }
 #grid-floats li:nth-child(7){
     clear:right;
     width:30%;
     float:left;  
-    
 }
 #grid-floats li:nth-child(8){
     clear:right;
     width:30%;
     float:right;  
-    
 }
 #grid-floats li:nth-child(9){
     clear:both;
     width:30%;
     float:left;  
-    
 }
 #grid-floats li:nth-child(10){
     clear:left;
     clear:right;
     width:30%;
     float:left;  
-    
 }
 #grid-floats li:nth-child(11){
     clear:right;
     width:30%;
     float:right; 
-     
-    
 }
 #grid-floats li:nth-child(12){
     clear:both;
     width:30%;
     float:left;  
-    
 }
 #grid-floats li:nth-child(13){
     clear:left;
     clear:right;
     width:30%;
     float:left;  
-    
 }
 #grid-floats li:nth-child(14){
     clear:right;
     width:30%;
     float:right;  
-    
 }
 }
 #grid-flex .grid-item{
@@ -358,13 +230,11 @@ p::first-line {
 }
 h2{
     clear:both;
-    
 }
 
 h3{
     text-align:center;
     color:blue;
-    
 }
 #grid-floats img {  
     max-width: 50%;  
@@ -381,8 +251,6 @@ h3{
     animation-name: example;
     animation-duration: 3s;
     background-image:url(images/sky.jpg)
-    
-    
 }
 
 @keyframes example {    /*https://www.w3schools.com/cssref/css3_pr_animation-keyframes.asp*/
@@ -393,9 +261,6 @@ h3{
     transform: scale(1.5); /* (150% zoom) */
     border-radius:100px;
     border:1px solid red;
-    
-   
-    
 }
 
 #grid-floats p{
@@ -404,9 +269,6 @@ h3{
     padding-right: 10px;
     color:black;
     line-height: 1.5;
-    
-    
-    
 }
 #grid-floats p:hover{
     transform: scale(1.08); /* (150% zoom) */
@@ -418,6 +280,9 @@ h3{
     
     
 }
+/*Desktop View*/
+
+/*the start of grid-flex*/
 #grid-flex{
     
     display:flex;
@@ -427,7 +292,6 @@ h3{
     height:250px;
     margin-left: 25px; 
        
-
 }
 
 #grid-flex .grid-item{
@@ -437,7 +301,8 @@ h3{
     list-style: none;
     resize: both; /*to let the user resize horizontally and vertically*/
     overflow:auto;
-    
+    text-align:center;
+    width:25%;
 }   
 
 #grid-flex img { 
@@ -452,246 +317,58 @@ h3{
     vertical-align:middle;
     text-align:center;
     margin-left: 0;
+    background-image:url(images/sky.jpg)
 }
 
 
 #grid-flex img:hover{ 
     transform: scale(1.5); /* (150% zoom) */
-    
-    
-
-    
 }
 
+/*flexbox desktop view*/
 #grid-flex li:first-child{
     width:45%;
-    text-align: center;
-   
+    
 }
 
 #grid-flex li:nth-child(2){
     width:25%;
-    text-align:center;
     margin-left: 10px;
 }
 
 #grid-flex li:nth-child(3){
-    width:20%;
-    text-align:center;
-    margin-left: 10px;
-    
+    width:25%;
+    margin-left: 15px;    
 }
    
-#grid-flex li:nth-child(4){
-    width:24%;
-    text-align:center;
-    
-}
-#grid-flex li:nth-child(5){
-    width:24%;
-    text-align:center;
-    
-    
-}
-#grid-flex li:nth-child(6){
-    width:24%;
-    text-align:center;
-    margin-left:10px;
-}
-#grid-flex li:nth-child(7){
-    width:24%;
-    text-align:center;
-    
-}
-#grid-flex li:nth-child(8){
-    width:24%;
-    text-align:center;
-}
-#grid-flex li:nth-child(9){
-    width:24%;
-    text-align:center;
-    margin-left:10px;
-}
-#grid-flex li:nth-child(10){
-    width:24%;
-    text-align:center;
-}
-#grid-flex li:nth-child(11){
-    width:24%;
-    text-align:center;
-}
-#grid-flex li:nth-child(12){
-    width:24%;
-    text-align:center;
-}
-#grid-flex li:nth-child(13){
-    width:24%;
-    text-align:center;
-}
-#grid-flex li:nth-child(14){
-    width:24%;
-    text-align:center;
-}
 
+/*flexbox mobile phone view*/
 @media (max-width:600px){
     
-    #grid-flex li:first-child{
-        
-        justify-content:center;
-        flex-grow:1;
-        
+    #grid-flex .grid-item{
+        flex-basis:100%;
     }
-    #grid-flex li:nth-child(2){
-        flex-direction: column;
-        width:90%;
-        text-align:center;
-        
-         
-     
-}
-#grid-flex li:nth-child(3){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
 }    
-    #grid-flex li:nth-child(4){
-        flex-direction: column;
-        width:90%;
-        text-align:center;
-}        
 
-#grid-flex li:nth-child(5){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-     
-#grid-flex li:nth-child(6){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(7){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(8){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(9){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(10){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(11){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(12){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(13){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(14){
-    flex-direction: column;
-    width:90%;
-    text-align:center;
-}    
-}  
- 
+/*flexbox tablet view*/ 
 @media screen /*https://websiteedu.com/media-queries-for-mobile-and-tablets.../*/
     and (min-device-width: 600px) 
     and (max-device-width: 1024px) 
 {
 
-    #grid-flex li:first-child{
-        flex-direction: column;
-        justify-content:center;
-        width:45%;
-        
-    }
+#grid-flex .grid-item{
+    width:33%;
+}
+   
+   
+#grid-flex li:first-child{
+    flex-direction: column;
+    justify-content:center;
+    width:45%;
+}
     #grid-flex li:nth-child(2){
         flex-direction: column;
         width:45%;
         text-align:center;
-        
-         
-     
 }
-#grid-flex li:nth-child(3){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-    #grid-flex li:nth-child(4){
-        flex-direction: column;
-        width:32%;
-        text-align:center;
-}        
-
-#grid-flex li:nth-child(5){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-     
-#grid-flex li:nth-child(6){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(7){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(8){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(9){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(10){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(11){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(12){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(13){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
-#grid-flex li:nth-child(14){
-    flex-direction: column;
-    width:32%;
-    text-align:center;
-}    
 }  
