--- a/WEEK1/style1.css
+++ b/WEEK1/style1.css
@@ -4,8 +4,13 @@
     grid-gap: 8px;
     grid-auto-rows: minmax(90px, auto);
     grid-template-rows: max-content;
-    
+}
+  
+  .wrapper > * {
+    background-color: rgb(0, 162, 255)
+    border:3px solid gray;
   }
+
   .one {
     grid-column: 1 / 7;
     grid-row: 1 / 2;
@@ -15,6 +20,7 @@
   .two { 
     grid-column: 7;
     grid-row: 1 / 2;
+    background-color:white;
     
   }
   
@@ -52,10 +58,14 @@
 
   }
 
-  h4{
+  
+    h3, h4 {
+        font-family:Arial, Helvetica, sans-serif;
+
+    h4{
       text-align:center;
       margin-block-start: 0.5em;
-      font-family: Arial, Helvetica, sans-serif;
+      
     
   }
 
@@ -77,6 +87,6 @@
 
   h3 {
       padding-left: 5px;
-      font-family: Arial, Helvetica, sans-serif;
+      
       
   }
