--- a/WEEK1/style1.css
+++ b/WEEK1/style1.css
@@ -11,46 +11,46 @@
     border:3px solid gray;
   }
 
-  .one {
+  .general_info {
     grid-column: 1 / 7;
     grid-row: 1 / 2;
     background-color:rgb(0, 162, 255);
     border:3px solid gray;
   }
-  .two { 
+  .picture { 
     grid-column: 7;
     grid-row: 1 / 2;
     background-color:white;
     
   }
   
-  .three {
+  .pro_summary {
     grid-column: 1 / 8;
     grid-row: 2;
     background-color:rgb(0, 162, 255);
     border:3px solid gray;
   }
   
-.four {
+.education {
     grid-column: 1 / 5;
     grid-row: 3 / 6;
     background-color:rgb(0, 162, 255);
     border:3px solid gray;
     justify-content: center;
   }
-  .five {
+  .work_experience {
     grid-column: 5 / 8;
     grid-row: 3 / 6;
     background-color:rgb(0, 162, 255);
     border:3px solid gray;
   }
-  .six {
+  .skills {
     grid-column: 1 / 5;
     grid-row: 6 / 8;
     background-color:rgb(0, 162, 255);
     border:3px solid gray;
   }
-  .seven {
+  .courses {
     grid-column: 5 / 8;
     grid-row: 6 / 8;
     background-color:rgb(0, 162, 255);
